Fixed outfit detail spacing

--- a/Wardrobe/Content/Site.css
+++ b/Wardrobe/Content/Site.css
@@ -76,6 +76,10 @@ textarea {
     padding: 10px 0 20px 0;
 }
 
+.spacing-bottom {
+    margin-bottom: 20px;
+}
+
 /*For the images in the details*/
 .detail-image {
     max-width: 400px;
